# ploidy

./: AGENTS.md  Cargo.toml  README.md  justfile
conformance/: GAPS.md  README.md
conformance/petstore-v3-client/: Cargo.toml
conformance/petstore-v3-client/src/: error.rs  lib.rs
conformance/petstore-v3-client/src/client/: default.rs  mod.rs
conformance/petstore-v3-client/src/types/: api_response.rs  category.rs  mod.rs  order.rs  pet.rs  tag.rs  user.rs
conformance/petstore-v3-client/tests/: roundtrip.rs
conformance/specs/: README.md
ploidy-codegen-rust/src/: client.rs  graph.rs  inlines.rs  lib.rs  naming.rs  operation.rs  resource.rs  types.rs
ploidy-core/src/ir/: graph.rs  spec.rs
ploidy-core/src/ir/tests/: graph.rs  spec.rs  views.rs
ploidy-core/src/ir/types/: mod.rs  shape.rs
ploidy-core/src/ir/views/: operation.rs
ploidy-core/src/parse/: path.rs  types.rs
ploidy-util/: Cargo.toml
ploidy-util/src/: error.rs
ploidy/tests/: conformance.rs
